Add: lang & seo (description & keywords

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="" id="atas">
+<html lang="id" id="atas">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="description" content=""/>
+    <meta name="keywords" content=""/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Digital Al-Qur'an</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
